tests/errors/_questions/generated_errors/wait_right_sq_br/[_in_def.c
void main()
{
	int А [100;
	int b = 10;

	printid(А);
	printid(b);
}